Fix to scrollToDate and truncating long event titles when not active to save space

--- a/css/src/styles.scss
+++ b/css/src/styles.scss
@@ -219,7 +219,10 @@ div.timeline{
         }
         h2{
             cursor:pointer;
+            overflow:hidden;
+            text-overflow:ellipsis;
             text-shadow:1px 1px 0px #000;
+            white-space:nowrap;
             width:$width-event;
         }
         &>div{
@@ -238,6 +241,9 @@ div.timeline{
         }
         &.active{
             z-index:$z-features-active;
+            h2{
+                white-space:normal;
+            }
             &>div{
                 background:$bg-event;
                 margin:$padding*4 $padding 0 $padding*-3;
